--- a/README
+++ b/README
@@ -1,6 +1,15 @@
-# Usage
+# Maintnance
 
 Initailly or after changing config, run:
+
 	python manage.py config_update
 	python manage.py schemamigration forms --auto
 	python manage.py migrate
+
+# API
+
+For client app to authenticate, the token key should be included in the Authorization HTTP header. The key should be prefixed by the string literal "Token", with whitespace separating the two strings. For example:
+
+	Authorization: Token 9944b09199c62bcf9418ad846dd0e4bbdfc6ee4b
+
+The token may be obtained by POSTing username and password to /api/get-token/
