--- a/README
+++ b/README
@@ -1,6 +1,12 @@
+# Installation
+
+Clone this repo into your environment, install dependencies from requirements.txt. Configure the DATABASES setting and run `manage.py syncdb`.
+
+In order to "file" fields to work, set MEDIA_ROOT according to your environment.
+
 # Maintnance
 
-Initailly or after changing config, run:
+After creating or changing config file, run:
 
 	python manage.py config_update
 	python manage.py schemamigration forms --auto
@@ -13,3 +19,5 @@ For client app to authenticate, the token key should be included in the Authoriz
 	Authorization: Token 9944b09199c62bcf9418ad846dd0e4bbdfc6ee4b
 
 The token may be obtained by POSTing username and password to /api/get-token/
+
+API can be explored and tested through web-browser
