--- a/README
+++ b/README
@@ -1,15 +1,26 @@
 # Installation
 
-Clone this repo into your environment, install dependencies from requirements.txt (`pip install -r < requirements.txt`). Configure the DATABASES setting and run `manage.py syncdb`.
+Clone this repo into your environment, install dependencies from requirements.txt (`pip install -r < requirements.txt`). Configure the DATABASES setting and run `python manage.py syncdb`.
 
 In order to "file" fields to work, set MEDIA_ROOT according to your environment.
 
-# API
+# Usage
+
+## Creating or changing forms
+
+Upload JSON config file at `/web/update-migrate/` (`config.json` in the root of this repo is an example of such file). Then perform database migration:
+
+	python manage.py schemamigration forms --auto
+	python manage.py migrate
+
+# Notes
+
+## API
 
 For client app to authenticate, the token key should be included in the Authorization HTTP header. The key should be prefixed by the string literal "Token", with whitespace separating the two strings. For example:
 
 	Authorization: Token 9944b09199c62bcf9418ad846dd0e4bbdfc6ee4b
 
-The token may be obtained by POSTing username and password to /api/get-token/
+The token may be obtained by POSTing username and password to `/api/get-token/`
 
-API can be explored and tested through web-browser
+API can be explored and tested through web-browser starting at `/api/`.
