--- a/README
+++ b/README
@@ -102,7 +102,9 @@ In order to "file" fields to work, set MEDIA_ROOT according to your environment.
 
 ## Creating or changing forms
 
-Upload JSON config file at `/web/update-migrate/` (`config.json` in the root of this repo is an example of such file). Then perform database migration:
+Upload JSON config file at `/web/update-migrate/` (`config.json` in the root of this repo is an example of such file) or run `python manage.py config_update`.
+
+Then perform database migration:
 
 	python manage.py schemamigration forms --auto
 	python manage.py migrate
